@@ -53,8 +53,9 @@ case "${1}" in
 
       # Now traverse /sys in order to "coldplug" devices that have
       # already been discovered
-      /sbin/udevadm trigger --action=add --type=subsystems
-      /sbin/udevadm trigger --action=add --type=devices
+      /sbin/udevadm trigger --action=add    --type=subsystems
+      /sbin/udevadm trigger --action=add    --type=devices
+      /sbin/udevadm trigger --action=change --type=devices
 
       # Now wait for udevd to process the uevents we triggered
       /sbin/udevadm settle
