@@ -38,6 +38,16 @@
 -->
 
     <listitem>
+      <para>2012-09-05</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Add udevadm trigger --action=change line 
+          to udev script to support initramfs better.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2012-09-04</para>
       <itemizedlist>
         <listitem>
